# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  help.py  scores.py  start.py
bot/handlers/commands/: __init__.py  health.py  labs.py  message.py  scores.py  start.py
bot/services/: __init__.py  api.py  intent_router.py  llm.py  llm_client.py  lms_client.py  tools.py
